// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputUnstyled when asked to render autofocused renders autofocused 1`] = `
<input
  aria-invalid={false}
  aria-label="Test label"
  aria-required={false}
  autoFocus={true}
  className="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
  data-invalid={false}
  data-test-id="test-input"
  disabled={false}
  id="test-input"
  name="test-input"
  required={false}
  type="text"
/>
`;

exports[`InputUnstyled when asked to render disabled renders disabled 1`] = `
<input
  aria-invalid={false}
  aria-label="Test label"
  aria-required={false}
  autoFocus={false}
  className="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
  data-invalid={false}
  data-test-id="test-input"
  disabled={true}
  id="test-input"
  name="test-input"
  required={false}
  type="text"
/>
`;

exports[`InputUnstyled when asked to render renders 1`] = `
<input
  aria-invalid={false}
  aria-label="Test label"
  aria-required={false}
  autoFocus={false}
  className="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
  data-invalid={false}
  data-test-id="test-input"
  disabled={false}
  id="test-input"
  name="test-input"
  required={false}
  type="text"
/>
`;

exports[`InputUnstyled when asked to render required renders required 1`] = `
<input
  aria-invalid={false}
  aria-label="Test label"
  aria-required={true}
  autoFocus={false}
  className="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
  data-invalid={false}
  data-test-id="test-input"
  disabled={false}
  id="test-input"
  name="test-input"
  required={true}
  type="text"
/>
`;

exports[`InputUnstyled when asked to render with placeholder renders with placeholder 1`] = `
<input
  aria-invalid={false}
  aria-label="Test label"
  aria-required={false}
  autoFocus={false}
  className="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
  data-invalid={false}
  data-test-id="test-input"
  disabled={false}
  id="test-input"
  name="test-input"
  placeholder="Test placeholder"
  required={false}
  type="text"
/>
`;

exports[`InputUnstyled when asked to render with value renders with placeholder 1`] = `
<input
  aria-invalid={false}
  aria-label="Test label"
  aria-required={false}
  autoFocus={false}
  className="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
  data-invalid={false}
  data-test-id="test-input"
  disabled={false}
  id="test-input"
  name="test-input"
  required={false}
  type="text"
  value="Test value"
/>
`;
